syntax = "proto3";

package kv;

option go_package = "toy_dynamodb/proto" ;

message PutRequest{
    string key=1;
    bytes value=2;
}

message PutResponse{
    bool success=1;
}

message GetRequest{
    string key =1;
}

message GetResponse{
    bytes value = 1;
    bool found=2;
}

message DeleteRequest{
    string key=1;
}
message DeleteResponse{
    bool success=1;
}

service KVStore{
    rpc Put(PutRequest)returns(PutResponse){}
    rpc Get(GetRequest)returns(GetResponse){}
    rpc Delete(DeleteRequest) returns (DeleteResponse){}
}
